iRedMail-0.9.3:
    * Fixed issues:
        - [RHEL/CentOS] Cannot start uwsgi service with 'daemonize' setting in
          /etc/uwsgi.ini.
        - Not preserve the case of ${extension} while delivering message to
          mailbox.

    * Updated packages:
        + Roundcube webmail -> 1.1.2.

iRedMail-0.9.2:
    * SOGo now works on Debian 8.
    * Improvements:
        - LMTP (port 24) and managesieve (port 4190) services are now listening
          on only localhost (127.0.0,1 and ::1) by default.
        - Improve Fail2ban filter `postfix.iredmail.conf` to prevent DoS
          attack to SMTP service.

    * Fixed issues:
        - Cannot create required SQL tables in `vmail` database with PostgreSQL
          backend.
        - catch-all support doesn't work with user+extension@domain.com.
          Thanks to stevekez <iredmail@stevekerrison.com> for the contribution
          in iRedMail support forum.
        - uwsgi service doesn't work on RHEL/CentOS. A new version of uwsgi
          package was submitted to EPEL repo with higher priority (not
          submitted by iRedMail team), it's not compatible with settings
          configured by iRedMail, this causes uwsgi service cannot be started.
        - Cannot import MySQL database on Jailed FreeBSD.
        - Not install required port 'databases/py-sqlalchemy' on FreeBSD.
        - Fix 'The Logjam Attack' ssl related issue. Reference:
          https://weakdh.org/

    * Updated packages:
        + iRedAPD -> 1.6.0, bug fixes.

iRedMail-0.9.1:
    * Works on new distribution releases:
        - Debian 8, Ubuntu 15.04. Notes:
            o Roundcube and iRedAdmin are now stored under /opt/www.
            o Cluebringer is not installed due to package missing in official
              repo, that means your server doesn't support greylisting and
              throttling.
            o SOGo is not installed due to package missing in upstream (SOGo)
              repo.

        - OpenBSd 5.7. Notes: