@@ -35,7 +35,7 @@ Please specify password for PostgreSQL administrator: ${PGSQL_ROOT_USER}
 
 WARNING:
 
-    * Do *NOT* use special characters in password right now. e.g. $, #, space.
+    * Do *NOT* use special characters in password right now. e.g. $, #, @, space.
     * EMPTY password is *NOT* permitted.
 " 20 76 2>/tmp/pgsql_rootpw
 
