@@ -153,6 +153,8 @@ passdb {
 plugin {
     auth_socket_path = PH_DOVECOT_AUTH_MASTER_PATH
 
+    # Quota configuration.
+    # Reference: http://wiki2.dovecot.org/Quota/Configuration
     quota = PH_QUOTA_TYPE
     quota_rule = *:storage=1G
     #quota_rule2 = *:messages=0
@@ -160,11 +162,20 @@ plugin {
     #quota_rule4 = Junk:ignore
 
     # Quota warning.
+    #
     # If user suddenly receives a huge mail and the quota jumps from
     # 85% to 95%, only the 95% script is executed.
-    quota_warning = storage=85%% quota-warning 85 %u
+    #
+    # Only the command for the first exceeded limit is executed, so configure
+    # the highest limit first.
+    quota_warning = storage=95%% quota-warning 95 %u
     quota_warning2 = storage=90%% quota-warning 90 %u
-    quota_warning3 = storage=95%% quota-warning 95 %u
+    quota_warning3 = storage=85%% quota-warning 85 %u
+
+    # Custom Quota Exceeded Message.
+    # You can specify the message directly or read the message from a file.
+    #quota_exceeded_message = Quota exceeded, please try again later.
+    #quota_exceeded_message = </path/to/quota_exceeded_message.txt
 
     # Plugin: autocreate. Create and subscribe to default IMAP folders.
     autocreate = INBOX
